# paflib

./: .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  generate-changelog.sh  ltmain.sh  make-release.sh  paflib-0.1-1.fc19.src.rpm  paflib-0.1.3-3.fc19.src.rpm  paflib-0.1.3-4.fc19.src.rpm  paflib.spec
common/: Makefile.am  Makefile.in  paf-common.h  paf-hwcap.c  paf-hwcap.h  paf-interp.c
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  files  libpaf-dev.install  libpaf-dev.lintian-overrides  libpaf-dsc0.install  libpaf-dsc0.lintian-overrides  libpaf-dsc0.symbols  libpaf-ebb0.install  libpaf-ebb0.lintian-overrides  libpaf-ebb0.symbols  rules  source.lintian-overrides  watch
debian/libpaf-dev/DEBIAN/: control  md5sums
debian/libpaf-dev/usr/include/paf/: dsc.h
debian/libpaf-dsc0/DEBIAN/: control  md5sums  shlibs
debian/libpaf-dsc0/usr/lib/powerpc64le-linux-gnu/: libpaf-dsc.so.0.0.2
debian/libpaf-ebb0/DEBIAN/: control  md5sums  shlibs
debian/libpaf-ebb0/usr/lib/powerpc64le-linux-gnu/: libpaf-ebb.so.0.0.2
debian/patches/: lib_no_exit.patch  lib_return.patch  series
debian/tmp/usr/include/paf/: ebb.h
debian/tmp/usr/lib/powerpc64le-linux-gnu/: libpaf-dsc.la  libpaf-dsc.so.0  libpaf-dsc.so.0.0.2  libpaf-ebb.la  libpaf-ebb.so.0  libpaf-ebb.so.0.0.2
debian/tmp/usr/share/doc/libpaf/: ChangeLog.md
debian/tmp/usr/share/man/man3/: libpaf-ebb.3
debian/upstream/: signing-key.asc
dsc/: Makefile.am  Makefile.in  common.h  dsc-version.c  dsc.c  hwcap.c  hwcap.h  init.c  ppcdsc.c
dsc/doc/: libpaf-dsc.3
dsc/paf/: dsc.h
dsc/tests/: test_dsc.c  test_ppcdsc.c
ebb/: Makefile.am  Makefile.in  ebb-callback-ppc32.S  ebb-callback-ppc64.S  ebb-callback.S  ebb-callback.h  ebb-common.h  ebb-hook.c  ebb-hwcap.c  ebb-hwcap.h  ebb-init.c  ebb-init.h  ebb-priv.h  ebb-sysdep.h  ebb-version.c  ebb.c  ppcebb-callback-ppc32.S  ppcebb-callback-ppc64.S  ppcebb-callback.h  ppcebb-common.h  ppcebb-hook.c  ppcebb-hwcap.c  ppcebb-hwcap.h  ppcebb-init.c  ppcebb-init.h  ppcebb-priv.h  ppcebb-sysdep.h  ppcebb.c  ppcebb.h
ebb/doc/: libpaf-ebb.3
ebb/paf/: ebb.h
ebb/tests/: test_ebb-skeleton.c  test_ebb.c  test_ebb_backtrace.c  test_ebb_child.c  test_ebb_clear_on_close.c  test_ebb_common.c  test_ebb_common.h  test_ebb_cpu.c  test_ebb_nohandler.c  test_ebb_pmu.c  test_ebb_pmu_clobber.c  test_ebb_pmu_clobber_hooks.S  test_ebb_pmu_multi.c  test_ebb_pmu_reset.c  test_ebb_save_area_env.sh  test_ppcebb-skeleton.c  test_ppcebb.c  test_ppcebb_backtrace.c  test_ppcebb_common.c  test_ppcebb_common.h  test_ppcebb_pmu.c  test_ppcebb_pmu_multi.c  test_ppcebb_pmu_reset.c
ppr/: Makefile.am  Makefile.in
ppr/doc/: libpaf-ppr.3
ppr/paf/: ppr.h
tb/: Makefile.am  Makefile.in
tb/doc/: libpaf-tb.3
tb/paf/: tb.h
tb/tests/: test_tb.c
